syntax = "proto3";

package users.v1;

import "google/protobuf/empty.proto";

message CreateUserRequest {
  string email = 1;
  string locale = 2;
  string display_name = 3;
}

message FindOneUserRequest {
  string id = 1; 
}

message UpdateUserRequest {
  string id = 1;
  string display_name = 2;
}

message User {
  string id = 1;
  string email = 2;
  string locale = 3;
  string display_name = 4;
  string created_at = 5;
  string updated_at = 6;
}

message UserList {
  repeated User items = 1;
}

service UsersService {
  rpc CreateUser (CreateUserRequest) returns (User);
  rpc FindAllUsers (google.protobuf.Empty) returns (UserList);
  rpc FindOneUser (FindOneUserRequest) returns (User);
  rpc UpdateUser (UpdateUserRequest) returns (User);
  rpc RemoveUser (FindOneUserRequest) returns (User);
}
